@@ -14,6 +14,7 @@ Stable versions
 	- fix pattern initialization sanity check
 	- fix ++ pattern handling in IT loader (reported by honguito98)
 	- fix Soundtracker short rip loading (reported by Shlomi Fish)
+	- add IT high offset command (SAx)
 
 4.3.6 (20150322):
 	Fix bugs caught in the OpenMPT test cases:
